# mobile-humanoid-hardware-interface

./: CMakeLists.txt  README.md  package.xml  plugin.xml
bringup/config/: origin_hardware_ros2control.yaml
bringup/launch/: view_robot.launch.py
description/launch/: display.launch.py
description/meshes/: base_link.stl  head_link.stl  left_elbow_link.stl  left_forearm_link.stl  left_hand_link.stl  left_inner_finger.stl  left_inner_finger_mirror.stl  left_inner_knuckle.stl  left_inner_knuckle_mirror.stl  left_outer_finger.stl  left_outer_finger_mirror.stl  left_outer_knuckle.stl  left_outer_knuckle_mirror.stl  left_shoulder_link.stl  left_upper_arm_link.stl  left_wrist_link.stl  neck_link.stl  right_elbow_link.stl  right_forearm_link.stl  right_hand_link.stl  right_inner_finger.stl  right_inner_finger_mirror.stl  right_inner_knuckle.stl  right_inner_knuckle_mirror.stl  right_outer_finger.stl  right_outer_finger_mirror.stl  right_outer_knuckle.stl  right_outer_knuckle_mirror.stl  right_shoulder_link.stl  right_upper_arm_link.stl  right_wrist_link.stl  rim.stl  roller.stl  w1Rim1_1.stl  wheel_3_1.stl
description/ros2_control/: hardware.ros2_control.xacro
description/rviz/: omnidirectional.rviz  rviz.rviz
description/urdf/: left_gripper.xacro  materials.xacro  origin.base.urdf.xacro  origin.gazebo.xacro  origin.head.urdf.xacro  origin.left.arm.urdf.xacro  origin.left.gripper.urdf.xacro  origin.right.arm.urdf.xacro  origin.right.gripper.urdf.xacro  origin.right_arm.urdf  origin.urdf.xacro  origin_macro.ros2_control.xacro  robotiq.gripper.urdf.xacro  robotiq_arg85_description.urdf.xacro  wheel.urdf.xacro
hardware/: origin_system.cpp
hardware/include/origin_hardware/: hardware_comms.hpp  origin_system.hpp  visibility_control.h  wheel.hpp
scripts/: udp_sim.py
